--- a/srcs/nginx.conf
+++ b/srcs/nginx.conf
@@ -10,6 +10,15 @@ events {
 }
 
 http {
+	server {
+		listen 80;
+		server_name localhost;
+
+		location / {
+			root /var/www/html;
+			index index.html;
+		}
+	}
 
 	##
 	# Basic Settings
